// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`second snapshot test Timer 1`] = `
<div
  className="Timer"
>
  <div
    className="Options"
  >
    <button
      className="btn btn-outline-primary btn-lg"
      data-backdrop="static"
      data-target="#timerConfigModal"
      data-toggle="modal"
    >
      Config
    </button>
    <div
      className="modal fade"
      id="timerConfigModal"
      tabIndex={-1}
    >
      <div
        className="modal-dialog"
      >
        <div
          className="modal-content"
        >
          <div
            className="modal-header"
          >
            <h5
              className="modal-title"
            >
              Configuration properties
            </h5>
            <button
              aria-label="Close"
              className="close"
              data-dismiss="modal"
              onClick={[Function]}
              type="button"
            >
              <span
                aria-hidden="true"
              >
                ×
              </span>
            </button>
          </div>
          <div
            className="modal-body"
          >
            <div>
              <label>
                Pomidor duration
                :
                <input
                  className="form-control"
                  onChange={[Function]}
                  type="number"
                  value={2}
                />
              </label>
            </div>
            <div>
              <label>
                Short break duration
                :
                <input
                  className="form-control"
                  onChange={[Function]}
                  type="number"
                  value={1}
                />
              </label>
            </div>
            <div>
              <label>
                Long break duration
                :
                <input
                  className="form-control"
                  onChange={[Function]}
                  type="number"
                  value={3}
                />
              </label>
            </div>
            <div>
              <label>
                Number of pomidors before long break
                :
                <input
                  className="form-control"
                  onChange={[Function]}
                  type="number"
                  value={5}
                />
              </label>
            </div>
            <div>
              <label>
                Alarm when zero
                <select
                  className="form-control"
                  onChange={[Function]}
                  value="false"
                >
                  <option
                    value="true"
                  >
                    true
                  </option>
                  <option
                    value="false"
                  >
                    false
                  </option>
                </select>
              </label>
            </div>
          </div>
          <div
            className="modal-footer"
          >
            <button
              className="btn btn-primary"
              data-dismiss="modal"
              onClick={[Function]}
              type="button"
            >
              Save changes
            </button>
            <button
              className="btn btn-secondary"
              data-dismiss="modal"
              id="closeDialog"
              onClick={[Function]}
              type="button"
            >
              Close
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="Time Pause"
  >
    0
    :
    03
  </div>
  <h5>
    Pause
  </h5>
  <p>
    Pomidors: 
    2
    /
    5
  </p>
  <div>
    <button
      className="btn btn-outline-primary btn-lg"
      onClick={[Function]}
    >
      Start
    </button>
    <button
      className="btn btn-outline-primary btn-lg"
      onClick={[Function]}
    >
      Pause
    </button>
    <button
      className="btn btn-outline-primary btn-lg"
      onClick={[Function]}
    >
      Stop
    </button>
    <button
      className="btn btn-outline-primary btn-lg"
      onClick={[Function]}
    >
      Skip
    </button>
  </div>
</div>
`;

exports[`second snapshot test TimerConfigDialog 1`] = `
<div
  className="modal fade"
  id="timerConfigModal"
  tabIndex={-1}
>
  <div
    className="modal-dialog"
  >
    <div
      className="modal-content"
    >
      <div
        className="modal-header"
      >
        <h5
          className="modal-title"
        >
          Configuration properties
        </h5>
        <button
          aria-label="Close"
          className="close"
          data-dismiss="modal"
          onClick={[Function]}
          type="button"
        >
          <span
            aria-hidden="true"
          >
            ×
          </span>
        </button>
      </div>
      <div
        className="modal-body"
      >
        <div>
          <label>
            Pomidor duration
            :
            <input
              className="form-control"
              onChange={[Function]}
              type="number"
              value={5}
            />
          </label>
        </div>
        <div>
          <label>
            Short break duration
            :
            <input
              className="form-control"
              onChange={[Function]}
              type="number"
              value={123}
            />
          </label>
        </div>
        <div>
          <label>
            Long break duration
            :
            <input
              className="form-control"
              onChange={[Function]}
              type="number"
              value={2}
            />
          </label>
        </div>
        <div>
          <label>
            Number of pomidors before long break
            :
            <input
              className="form-control"
              onChange={[Function]}
              type="number"
              value={3}
            />
          </label>
        </div>
        <div>
          <label>
            Alarm when zero
            <select
              className="form-control"
              onChange={[Function]}
              value="false"
            >
              <option
                value="true"
              >
                true
              </option>
              <option
                value="false"
              >
                false
              </option>
            </select>
          </label>
        </div>
      </div>
      <div
        className="modal-footer"
      >
        <button
          className="btn btn-primary"
          data-dismiss="modal"
          onClick={[Function]}
          type="button"
        >
          Save changes
        </button>
        <button
          className="btn btn-secondary"
          data-dismiss="modal"
          id="closeDialog"
          onClick={[Function]}
          type="button"
        >
          Close
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`second snapshot test UpdateCurrentTaskDialog 1`] = `
<div
  className="modal fade"
  id="updateCurrentTaskModal-1"
  tabIndex={-1}
>
  <div
    className="modal-dialog"
  >
    <div
      className="modal-content"
    >
      <div
        className="modal-header"
      >
        <h5
          className="modal-title"
        >
          Update task
        </h5>
        <button
          aria-label="Close"
          className="close"
          data-dismiss="modal"
          onClick={[Function]}
          type="button"
        >
          <span
            aria-hidden="true"
          >
            ×
          </span>
        </button>
      </div>
      <div
        className="modal-body"
      >
        <div>
          <label>
            Id: 
            1
          </label>
          <label
            className="Param"
          >
            Tag
            :
            <input
              className="form-control"
              onChange={[Function]}
              type="text"
              value="ADSD"
            />
          </label>
          <label
            className="Param"
          >
            Description
            :
            <input
              className="form-control"
              onChange={[Function]}
              type="text"
              value="ASD"
            />
          </label>
          <label
            className="Param"
          >
            Number of pomidors
            :
            <input
              className="form-control"
              onChange={[Function]}
              type="number"
              value={2}
            />
          </label>
        </div>
      </div>
      <div
        className="modal-footer"
      >
        <button
          className="btn btn-primary"
          data-dismiss="modal"
          onClick={[Function]}
          type="button"
        >
          Save changes
        </button>
        <button
          className="btn btn-secondary"
          data-dismiss="modal"
          onClick={[Function]}
          type="button"
        >
          Close
        </button>
      </div>
    </div>
  </div>
</div>
`;
